--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
+    "styled-normalize": "^8.0.7",
     "uniqid": "^5.4.0",
     "web-vitals": "^1.1.2"
   },
